src/objects/PRF__c.object
<CustomObject>
    <fields>
        <fullName>AIA_Prescription_RX__c</fullName>
        <label>Prescription RX</label>
        <picklist>
            <picklistValues>
                <fullName>Preferred Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusive Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broad (National)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account1_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefits_Services__c</fullName>
        <label>Benefits/Services</label>
        <picklist>
            <picklistValues>
                <fullName>Care Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disease Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wellness</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Binder_Size__c</fullName>
        <label>Binder Size</label>
        <picklist>
            <picklistValues>
                <fullName>3&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 1/2&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/2&quot;</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Carefirst_Mktg_Svc_Area_Based_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carefirst Mktg Svc Area Based Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cede_Letter_Forthcoming__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cede Letter Forthcoming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_Off__c</fullName>
        <label>Check Off Cede Information</label>
        <picklist>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obtaining</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claims_Repricing_Medical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claims Repricing Medical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claims_Repricing_RX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claims Repricing RX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claims_Repricing_Vision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claims Repricing Vision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_Title_NAFBA1_07_R_0036_or_Verizon__c</fullName>
        <label>Co. Title (NAFBA1-07-R-0036 or Verizon)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Needed_Date_Due_to_Coordinator__c</fullName>
        <label>Date Needed (Date Due to Coordinator)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivered_Date__c</fullName>
        <label>Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Person__c</fullName>
        <label>Delivery Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Employer_Sponsored__c</fullName>
        <label>Dental Empl Sponsored</label>
        <picklist>
            <picklistValues>
                <fullName>DHMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHMO/DPOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred (PPO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traditional (PAR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueDental Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueDental Plus</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Bid_Decision__c</fullName>
        <label>Final Bid Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Decision_Date__c</fullName>
        <label>Final Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstHelp_Nurse_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Additional Fees apply</inlineHelpText>
        <label>FirstHelp Nurse Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fully_Insured_Self_Insured__c</fullName>
        <label>Fully Insured/Self-Insured</label>
        <picklist>
            <picklistValues>
                <fullName>Fully Insured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Insured</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Guarantees__c</fullName>
        <label>Guarantees</label>
        <picklist>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Health_Assessment__c</fullName>
        <inlineHelpText>Opt1: Health Assessment with Online Health Coaching.
Opt2: Health Assessment with Telephonic Health Advising, Online Health Coaching.
Opt3: Health Assessment with Telephonic Health Advising, Online Health Coaching, Telephonic Health Coaching.</inlineHelpText>
        <label>Health Assessment</label>
        <picklist>
            <picklistValues>
                <fullName>Carve In PCMH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carve In TCCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carve In DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carve In Wellness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carve Out PCHM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carve Out TCCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carve Out DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carve Out Wellness</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_Many_CD_Label_Tab__c</fullName>
        <label>How Many (CD/Label/Tab)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implementation Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Magellan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Magellan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_an_Electronic_Cover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need an Electronic Cover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Network_Title_Reg_HMO_POS_Network_Prov__c</fullName>
        <label>Network Title (Reg HMO/POS Network Prov)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_Bid_Comments__c</fullName>
        <label>No Bid Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Proposal Request Forms</relationshipLabel>
        <relationshipName>Proposal_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Bid_Date__c</fullName>
        <label>Original Bid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Delivery_Method__c</fullName>
        <label>Other Delivery Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Info__c</fullName>
        <label>Other Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Jurisdiction_s__c</fullName>
        <label>Product/Jurisdiction(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_Summary__c</fullName>
        <label>RFP Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sent_Date__c</fullName>
        <label>Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title_Page_Instructions__c</fullName>
        <label>Title Page Instructions</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Copies__c</fullName>
        <label>Total Number of Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wellness_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wellness Credit</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>AIA_CF_200</fullName>
        <active>true</active>
        <description>CF Proposal Request (200+)</description>
        <label>CF (200+)</label>
    </recordTypes>
    <recordTypes>
        <fullName>AIA_TPA_200</fullName>
        <active>true</active>
        <description>TPA Proposal Request (200+)</description>
        <label>TPA (200+)</label>
    </recordTypes>
    <validationRules>
        <fullName>EPRF010</fullName>
        <active>true</active>
        <description>Account Legal Verification is required before creating a proposal</description>
        <errorConditionFormula>NOT (Opportunity__r.Legal_Account_Name_Verified__c)
 &amp;&amp; RecordType.Name = &apos;CF (200+)&apos;</errorConditionFormula>
        <errorMessage>EPRF010: Please validate the Legal Name on the Opportunity before proceeding</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPRF011</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Delivery_Method__c , &quot;Other&quot;), Other_Delivery_Method__c  = &apos;&apos; )</errorConditionFormula>
        <errorDisplayField>Other_Delivery_Method__c</errorDisplayField>
        <errorMessage>EPRF011: Please provide the Other Delivery Method</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF001</fullName>
        <active>true</active>
        <description>If Required Mapping field&apos;s selection equals &apos;Alt. Network&apos; then the user must select from the Alternative Network field (states).</description>
        <errorConditionFormula>INCLUDES( Required_Mapping__c , &apos;Alt. Networks&apos;) &amp;&amp; ISNULL(Alternative_Network__c)</errorConditionFormula>
        <errorDisplayField>Alternative_Network__c</errorDisplayField>
        <errorMessage>PRF001: A value must be selected from the Alternative Network field when &apos;Alt. Networks&apos; is selected on the Required Mapping field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF002</fullName>
        <active>true</active>
        <description>If the Alternative Network field has a selected value then the Required Mapping field must also have a selection.</description>
        <errorConditionFormula>NOT(INCLUDES( Required_Mapping__c , &apos;Alt. Networks&apos;)) &amp;&amp; NOT(ISNULL(Alternative_Network__c))</errorConditionFormula>
        <errorDisplayField>Required_Mapping__c</errorDisplayField>
        <errorMessage>PRF002: The &apos;Alt. Networks&apos; value must be selected from the Required Mapping field when a value is selected on the Alternative Network field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF003</fullName>
        <active>true</active>
        <errorConditionFormula>IF(INCLUDES(Medical_Networks__c, &apos;Alternative Networks&apos;) &amp;&amp; ISNULL( Alt_Network_State__c), TRUE, FALSE) || 
IF (NOT(ISNULL(Alt_Network_State__c)) &amp;&amp; NOT(INCLUDES(Medical_Networks__c, &apos;Alternative Networks&apos;)), TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Alt_Network_State__c</errorDisplayField>
        <errorMessage>PRF003: When the Medical Networks field contains &apos;Alternative Networks&apos; a state must be chosen or if the Alt. Network State field is selected then the &apos;Alternative Networks&apos; must be selected on the Medical Networks field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF004</fullName>
        <active>true</active>
        <errorConditionFormula>IF( INCLUDES( Medical_Products__c , &apos;CDH&apos; ) &amp;&amp; ISNULL( CDH_Products__c ) || 
INCLUDES( Medical_Products__c , &apos;CDH&apos; ) &amp;&amp; ISPICKVAL( CDH_Administrator__c, &apos;&apos; )  ||
INCLUDES( Medical_Products__c , &apos;CDH&apos; )  &amp;&amp; ISPICKVAL( CDH_Funding_Arrangement__c, &apos;&apos; ), true, false )</errorConditionFormula>
        <errorDisplayField>Medical_Products__c</errorDisplayField>
        <errorMessage>PRF004: When the Medical Products field contains &apos;CDH&apos; the CDH Products,  CDH Administrator, CDH Funding Arrangement, and CDH Add&apos;l Info must be filled out</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF005</fullName>
        <active>true</active>
        <errorConditionFormula>IF( NOT(INCLUDES( Medical_Products__c, &apos;CDH&apos; )) &amp;&amp; NOT(ISNULL( CDH_Products__c )) || NOT(INCLUDES( Medical_Products__c , &apos;CDH&apos; )) &amp;&amp; NOT(ISBLANK( CDH_Addl_Info__c )) ||
NOT(INCLUDES( Medical_Products__c, &apos;CDH&apos; )) &amp;&amp; NOT(ISPICKVAL( CDH_Administrator__c, &apos;&apos; ))  ||
NOT(INCLUDES( Medical_Products__c, &apos;CDH&apos; ))  &amp;&amp; NOT(ISPICKVAL( CDH_Funding_Arrangement__c, &apos;&apos; )), true, false )</errorConditionFormula>
        <errorDisplayField>Medical_Products__c</errorDisplayField>
        <errorMessage>PRF005: When the Medical Products field does not contain &apos;CDH&apos; the CDH Products,  CDH Administrator, CDH Funding Arrangement, and CDH Add&apos;l Info must be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF006</fullName>
        <active>true</active>
        <errorConditionFormula>IF( INCLUDES( Vision_Empl_Sponsored__c , &apos;Custom&apos;) &amp;&amp;  ISBLANK(Vision_Empl_Sponsored_Addl__c), true, false)</errorConditionFormula>
        <errorDisplayField>Vision_Empl_Sponsored_Addl__c</errorDisplayField>
        <errorMessage>PRF006: When Vision Sponsored contains &apos;Custom&apos; then Vision Empl Sponsored Add&apos;l must be filled out</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF007</fullName>
        <active>true</active>
        <errorConditionFormula>$RecordType.DeveloperName = &apos;TPA_Proposal_Request&apos; &amp;&amp;  $Profile.Name = &apos;RFP CF - Custom&apos;</errorConditionFormula>
        <errorMessage>PRF007: CareFirst Proposal Coordinators cannot edit TPA Proposals</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF008</fullName>
        <active>true</active>
        <errorConditionFormula>$RecordType.DeveloperName = &apos;CF_Proposal_Request&apos; &amp;&amp;  $Profile.Name = &apos;RFP TPA - Custom&apos;</errorConditionFormula>
        <errorMessage>PRF007: TPA Proposal Coordinators cannot edit CareFirst Proposals</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF009</fullName>
        <active>true</active>
        <description>Prevent the value &apos;None&apos; from being selected if other values are selected</description>
        <errorConditionFormula>INCLUDES(Analysis_Requested__c, &apos;None&apos;) &amp;&amp; INCLUDES(Analysis_Requested__c, &apos;ADA Code Analysis&apos;) ||
INCLUDES(Analysis_Requested__c, &apos;None&apos;) &amp;&amp; INCLUDES(Analysis_Requested__c, &apos;CPT Code Analysis&apos;) ||
INCLUDES(Analysis_Requested__c, &apos;None&apos;) &amp;&amp; INCLUDES(Analysis_Requested__c, &apos;Disruption&apos;) ||
INCLUDES(Analysis_Requested__c, &apos;None&apos;) &amp;&amp; INCLUDES(Analysis_Requested__c, &apos;GeoAccess&apos;)</errorConditionFormula>
        <errorDisplayField>Analysis_Requested__c</errorDisplayField>
        <errorMessage>PRF009: &apos;None&apos; can only be selected by itself</errorMessage>
    </validationRules>
</CustomObject>